--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -46,8 +46,8 @@ steps:
     displayName: 'Get branch name'
 
   - script: |
-      git checkout $(BRANCH_NAME)
-      git push -f -v adobe $(BRANCH_NAME)
+      git checkout master
+      git push -f -v adobe master
     displayName: 'Sync branch (push)'
     condition: and(succeeded(), eq(variables['Build.Reason'], 'Manual'))
 
