--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -50,6 +50,7 @@ steps:
 
   - script: |
       git checkout $(Build.SourceBranchName)
+      git commit -m "new commits"
       echo "==============================="
       git branch -l
       echo "==============================="
