--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -14,9 +14,13 @@ pool:
   vmImage: 'ubuntu-latest'  # Use an appropriate image for your script (Windows, macOS, etc.)
 
 steps:
-- checkout: self  # This will checkout the default branch of the current repository
-  persistCredentials: true
-  clean: true  # Clean any left-over artifacts from previous runs
+- script: |
+    # Check out the 'main' branch of the current repository
+    git config --global user.email "azure-pipelines@noreply.com"
+    git config --global user.name "Azure Pipelines"
+    git fetch origin
+    git checkout origin/main
+  displayName: 'Checkout main branch'
 
 - script: |
     TARGET_GIT="https://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@github.com/mayurb-org/aem-devops.git"
