Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -33,7 +33,7 @@ steps:
 
   - script: |
       echo $(BRANCH_NAME)
-      ls -ltrh
+      ls -ltrha
       git checkout $(BRANCH_NAME)
       git push -f -v adobe $(BRANCH_NAME)
     displayName: 'Sync branch (push)'
