--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -32,10 +32,10 @@ steps:
     displayName: 'Get branch name'
 
   - script: |
-      echo $(BRANCH_NAME)
+      echo ${BRANCH_NAME}
       ls -ltrha
-      git checkout $(BRANCH_NAME)
-      git push -f -v adobe $(BRANCH_NAME)
+      git checkout ${BRANCH_NAME}
+      git push -f -v adobe HEAD:${BRANCH_NAME}
     displayName: 'Sync branch (push)'
     condition: and(succeeded(), eq(variables['Build.Reason'], 'IndividualCI'))
 
@@ -43,7 +43,7 @@ steps:
       if [ "$(Build.Reason)" == "PullRequest" ]; then
         if [ $(PR.SourceBranch) != "refs/heads/main" ]; then
           BRANCH_NAME=$(echo $(PR.SourceBranch) | sed 's/refs\/heads\///')
-          git push --delete -f -v adobe $(BRANCH_NAME)
+          git push --delete -f -v adobe ${BRANCH_NAME}
         fi
       fi
     displayName: 'Remove branch (delete)'
