--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -30,6 +30,8 @@ steps:
       fi
       echo "BRANCH_NAME=${BRANCH_NAME}"
 
+      git fsck --full
+      git fetch origin
       ls -ltrha
       git push -f -v adobe HEAD:${BRANCH_NAME} --force
     displayName: 'Get branch name and Sync (push)'
