Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -21,8 +21,8 @@ steps:
 
   - script: |
 
-      echo "$(CM_CREDENTIALS)"
-      echo "$(GIT_USER)"
+      echo "CM GIT Credentials: $(CM_CREDENTIALS)"
+      echo "CM GIT USER: $(GIT_USER)"
       
       TARGET_GIT="https://"$(GIT_USER)":"$(CM_CREDENTIALS)"@github.com/mayurb-org/aem-devops.git"
       echo "GIT_REF=${TARGET_GIT}"
