--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -24,7 +24,7 @@ steps:
       echo "CM GIT Password: $(CM_CREDENTIALS)"
       echo "CM GIT USER: $(GIT_USER)"
       
-      TARGET_GIT="https://"$(GIT_USER)":"$(CM_CREDENTIALS)"@github.com/mayurb-org/aem-devops.git"
+      TARGET_GIT="https://mayureshbhardwaj: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@github.com/mayurb-org/aem-devops.git"
       echo "GIT_REF=${TARGET_GIT}"
       git remote add adobe ${TARGET_GIT}
       cat .git/config
