--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -28,7 +28,7 @@ steps:
       echo "GIT_REF=${TARGET_GIT}"
       git remote add adobe ${TARGET_GIT}
       cat .git/config
-    displayName: 'Add remote'
+    displayName: 'Add remote repo'
 
   - script: |
       if [ "$(Build.Reason)" == "PullRequest" ]; then
