--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -20,7 +20,7 @@ steps:
     fetchDepth: 0
 
   - script: |      
-      git config credential.helper store
+      git config --global --unset credential.helper
       TARGET_GIT="https://mayureshbhardwaj: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@github.com/mayurb-org/aem-devops.git"
       echo "GIT_REF=${TARGET_GIT}"
       git remote add adobe ${TARGET_GIT}
@@ -35,7 +35,7 @@ steps:
       fi
       echo "BRANCH_NAME=${BRANCH_NAME}"
 
-      git config credential.helper store
+      git config --global --unset credential.helper
 
       git fsck --full
       git fetch origin
