--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -29,7 +29,7 @@ steps:
 
   - script: |      
       git config --global --unset credential.helper
-      TARGET_GIT="https://github.com/mayurb-org/aem-devops.git"
+      TARGET_GIT="https://mayureshbhardwaj:$(CM_CREDENTIALS)@github.com/mayurb-org/aem-devops.git"
       echo "GIT_REF=${TARGET_GIT}"
       git remote add adobe ${TARGET_GIT}
       cat .git/config
