--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -29,7 +29,7 @@ steps:
 
   - script: |      
       git config --global --unset credential.helper
-      TARGET_GIT="https://mayureshbhardwaj:$(CM_CREDENTIALS)@github.com/mayurb-org/aem-devops.git"
+      TARGET_GIT="https://mayureshbhardwaj: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@github.com/mayurb-org/aem-devops.git"
       echo "GIT_REF=${TARGET_GIT}"
       git remote add adobe ${TARGET_GIT}
       cat .git/config
@@ -42,8 +42,6 @@ steps:
         BRANCH_NAME=$(echo $BUILD_SOURCEBRANCH | sed 's/refs\/heads\///')
       fi
       echo "BRANCH_NAME=${BRANCH_NAME}"
-
-      git config --global --unset credential.helper
 
       git fsck --full
       git fetch origin
